--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,8 @@
     "angular-sanitize": "^1.4.0",
     "angular-touch": "^1.4.0",
     "ui-leaflet": "^2.0.0",
-    "ng-map-autocomplete": "^1.0.3"
+    "ng-map-autocomplete": "^1.0.3",
+    "ng-image-gallery": "^2.1.2"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
